refactor(bonusService): changed method getByPrivilegeId at PrivilegeHistoryServiceImpl