@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +32,7 @@ public class PrivilegeHistoryServiceImpl implements PrivilegeHistoryService {
         return repository.getByPrivilegeId(privilegeId)
                 .stream()
                 .map(mapper::convert)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
 
